TestSaleJsonBuilder - use recommended static constructor.